--- a/README.adoc
+++ b/README.adoc
@@ -1981,12 +1981,13 @@ The examples module which contains:
 * https://github.com/database-rider/database-rider/tree/master/rider-examples/spring-boot-dbunit-sample/[SpringBoot Data DBUnit^]
 * https://github.com/rmpestano/spring-events/blob/master/src/test/java/com/sambrannen/spring/events/repository/EventRepositoryTests.java#L47[Gradle, SpringBoot and JUnit5 example^]
 * https://github.com/database-rider/database-rider/tree/master/rider-examples/quarkus-dbunit-sample/[Quarkus DBUnit^]
+* https://github.com/database-rider/database-rider/tree/master/rider-examples/rider-micronaut/[Rider Micronaut^]
 
 And also each module contain a lot of tests that you can use as example.
 
 == Changelog
 
-See project release https://github.com/database-rider/database-rider/blob/master/CHANGELOG.adoc[changelog here^].
+See https://github.com/database-rider/database-rider/releases[project releases on github^] for tracking changes per release.
 
 == Snapshots
 
