fixes #252 - Make it possible to disableSequenceFiltering per test or globally

--- a/README.adoc
+++ b/README.adoc
@@ -344,6 +344,7 @@ mergingStrategy: METHOD <1>
 caseInsensitiveStrategy: UPPERCASE <2>
 raiseExceptionOnCleanUp: false <3>
 expectedDbType: UNKNOWN <4>
+disableSequenceFiltering: false <5>
 properties:
   batchedStatements:  false
   qualifiedTableNames: false
@@ -354,7 +355,7 @@ properties:
   allowEmptyFields: false
   escapePattern:
   schema:
-  datatypeFactory: !!com.github.database.rider.core.configuration.DBUnitConfigTest$MockDataTypeFactory {} <5>
+  datatypeFactory: !!com.github.database.rider.core.configuration.DBUnitConfigTest$MockDataTypeFactory {} <6>
   tableType: ["TABLE"]
 connectionConfig:
   driver: ""
@@ -366,7 +367,9 @@ connectionConfig:
 <2> Only applied when `caseSensitiveTableNames` is `false`. Valid values are `UPPERCASE` and `LOWERCASE`.
 <3> If enabled an exception will be raised when `cleanBefore` or `cleanAfter` fails. If disabled then only a warn message is logged. Default is false.
 <4> In the process of initialization, if the actual database type is different from the expected database type, exception will be thrown unless the expected database type is UNKNOWN. Default is UNKNOWN.
-<5> Make it possible to define a datatype factory, https://github.com/database-rider/database-rider/issues/30[see issue #30^] for details.
+<5> Disables sequenceFiltering at dbunit level, overriding the default behavior of `@DataSet(useSequenceFiltering)` which is true.
+<6> Make it possible to define a datatype factory, https://github.com/database-rider/database-rider/issues/30[see issue #30^] for details.
+
 
 IMPORTANT: `@DBUnit` annotation takes precedence over `dbunit.yml` global configuration which will be used only if the annotation is not present.
 
