--- a/README.adoc
+++ b/README.adoc
@@ -1883,7 +1883,7 @@ public class QuarkusDBUnitTest {
     @Test
     @DataSet(value = "books.yml")
     public void shouldFindAllBooks() {
-        List<Book> books = repository.findAll();
+        List<Book> books = repository.findAll().list();
         assertThat(books)
                 .isNotNull()
                 .hasSize(4)
