--- a/README.adoc
+++ b/README.adoc
@@ -172,7 +172,7 @@ This module is the basis for subsequent modules. It contains a JUnit rule (shown
 <dependency>
       <groupId>com.github.database-rider</groupId>
       <artifactId>rider-core</artifactId>
-      <version>1.30.0</version>
+      <version>1.31.0</version>
       <scope>test</scope>
 </dependency>
 ----
@@ -756,7 +756,7 @@ NOTE: This test will pass if database state after test contains a row in `user t
 
 ==== Using `script assertions` in expected datatset
 
-Since `v1.31.0` it's possible to use javascript oe groovy assertions (based on <<Scriptable DataSets>>) in `@ExpectedDataSet`, for example consider the following dataset:
+Since `v1.31.0` it's possible to use javascript or groovy assertions (based on <<Scriptable DataSets>>) in `@ExpectedDataSet`, for example consider the following dataset:
 
 ```
 USER:
@@ -766,7 +766,7 @@ USER:
     NAME: "groovy:(value != null && value.contains('@dbunit'))"
 ```
 
-To enable the scripting you mainly need the `js: or groovy:` prefix *followed by an expression which evaluates to boolean* inside a `parentheses`.
+To enable the scripting you mainly need the `js: or groovy:` prefix *followed by an expression which evaluates to boolean* inside a `parentheses`. The `value` in the expression refers to the actual value that should be in database after the test runs.
 
 ```
     @Test
@@ -1525,7 +1525,7 @@ If you use CDI in your tests then you should give a try in Database Rider https:
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-cdi</artifactId>
-    <version>1.30.0</version>
+    <version>1.31.0</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1592,7 +1592,7 @@ NOTE: If you don't use CDI you'll need to https://github.com/database-rider/data
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-cucumber</artifactId>
-    <version>1.30.0</version>
+    <version>1.31.0</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1799,7 +1799,7 @@ http://junit.org/junit5/[JUnit 5] is the new version of JUnit and comes with a n
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-junit5</artifactId>
-    <version>1.30.0</version>
+    <version>1.31.0</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1875,7 +1875,7 @@ Add Database Rider Spring extension to your project
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-spring</artifactId>
-    <version>1.30.0</version>
+    <version>1.31.0</version>
     <scope>test</scope>
 </dependency>
 ----
